bizinikiwi/pezframe/support/test/tests/pezpallet_ui/config_metadata_non_type_info.stderr
error: Invalid #[pezpallet::include_metadata] in #[pezpallet::config], collected type `MyNonScaleTypeInfo` does not implement `TypeInfo` or `Parameter`
  --> tests/pezpallet_ui/config_metadata_non_type_info.rs:28:4
   |
28 |         #[pezpallet::include_metadata]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
